# homework_7_modul

./: .gitignore  alembic.ini  main.py  models.py  my_select.py  new_table_.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 661d03dab757_init.py
